Redis functions moved to separate file; ButtonType renamed to RoodID;
